--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,11 @@ dependencies = [
     "pyperclip (>=1.9.0,<2.0.0)",
     "uuid (>=1.30,<2.0)",
     "datetime (>=5.5,<6.0)",
-    "argparse (>=1.4.0,<2.0.0)"
+    "argparse (>=1.4.0,<2.0.0)",
+    "dotenv (>=0.9.9,<0.10.0)",
+    "requests (>=2.32.4,<3.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "cryptography (>=45.0.5,<46.0.0)"
 ]
 
 
