--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "dotenv (>=0.9.9,<0.10.0)",
     "requests (>=2.32.4,<3.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
-    "cryptography (>=45.0.5,<46.0.0)"
+    "cryptography (>=45.0.5,<46.0.0)",
+    "faker (>=37.5.3,<38.0.0)"
 ]
 
 
