--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "requests (>=2.32.4,<3.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "cryptography (>=45.0.5,<46.0.0)",
-    "faker (>=37.5.3,<38.0.0)"
+    "faker (>=37.5.3,<38.0.0)",
+    "selenium (>=4.34.2,<5.0.0)",
+    "webdriver-manager (>=4.0.2,<5.0.0)"
 ]
 
 
