--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "cryptography (>=45.0.5,<46.0.0)",
     "faker (>=37.5.3,<38.0.0)",
     "selenium (>=4.34.2,<5.0.0)",
-    "webdriver-manager (>=4.0.2,<5.0.0)"
+    "webdriver-manager (>=4.0.2,<5.0.0)",
+    "ipdb (>=0.13.13,<0.14.0)"
 ]
 
 
