--- a/typescript/prescription-bundle-creator/package.json
+++ b/typescript/prescription-bundle-creator/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "psu-request-generator",
+  "name": "prescription-bundle-creator",
   "version": "0.1.0",
-  "description": "Generate PSU Create Prescription FHIR bundles",
+  "description": "Generate FHIR prescription bundles",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "generate-psu-request": "./dist/cli.js"
+    "create-prescription-bundle": "./dist/cli.js"
   },
   "files": [
     "dist"
@@ -15,6 +15,7 @@
     "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "commander": "^12.1.0",
     "nhs-number-generator": "file:../nhs-number-generator",
     "prescription-id-generator": "file:../prescription-id-generator"
