--- a/typescript/psu-request-generator/package.json
+++ b/typescript/psu-request-generator/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "commander": "^12.1.0",
     "nhs-number-generator": "file:../nhs-number-generator",
+    "ods-code-generator": "file:../ods-code-generator",
     "prescription-id-generator": "file:../prescription-id-generator"
   },
   "devDependencies": {
